--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <div></div>
     <div></div>
     <div></div>
+    <p class="ji"></p>
+    <p class="ji"></p>
+    <p class="ji"></p>
 </body>
 </html>
